# env-marker-example

./: README.md  check_env.py  env-w-freethreading.yaml  env-wo-freethreading.yaml  expected-ft-x86.txt  expected-noft-32.txt  expected-noft-x64.txt  pyproject.toml
.github/workflows/: test.yml
